# XtremeContextualBandits

./: CMakeLists.txt  README.md  requirements.txt  setup.py
lib/eigen/Eigen/src/SparseCore/: SparseMatrix.h
src/xcb/corelib/: bindings.cpp  toy.cpp  xcb_inference.cpp  xcb_inference.hpp
src/xcb/eval/: simulator.py
src/xcb/indexing/: co_clustering.py
src/xcb/utils/: convert2sparse.py  logging.py
src/xcb/xfalcon/: inference.py  train.py
src/xcb/xmc/: multilabel_train.py
